--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,33 @@
-[submodule "tpope/vim-cucumber"]
-	path = tpope/vim-cucumber
-	url = git://github.com/tpope/vim-cucumber.git
-[submodule "tpope/vim-fugitive"]
-	path = tpope/vim-fugitive
-	url = git://github.com/tpope/vim-fugitive.git
-[submodule "tpope/vim-haml"]
-	path = tpope/vim-haml
-	url = git://github.com/tpope/vim-haml.git
-[submodule "tpope/vim-liquid"]
-	path = tpope/vim-liquid
-	url = git://github.com/tpope/vim-liquid.git
-[submodule "tpope/vim-markdown"]
-	path = tpope/vim-markdown
-	url = git://github.com/tpope/vim-markdown.git
-[submodule "tpope/vim-ragtag"]
-	path = tpope/vim-ragtag
-	url = git://github.com/tpope/vim-ragtag.git
-[submodule "tpope/vim-rails"]
-	path = tpope/vim-rails
-	url = git://github.com/tpope/vim-rails.git
-[submodule "tpope/vim-rake"]
-	path = tpope/vim-rake
-	url = git://github.com/tpope/vim-rake.git
-[submodule "tpope/vim-speeddating"]
-	path = tpope/vim-speeddating
-	url = git://github.com/tpope/vim-speeddating.git
-[submodule "tpope/vim-surround"]
-	path = tpope/vim-surround
-	url = git://github.com/tpope/vim-surround.git
-[submodule "tpope/vim-unimpaired"]
-	path = tpope/vim-unimpaired
-	url = git://github.com/tpope/vim-unimpaired.git
+[submodule "vim/bundle/vim-cucumber"]
+	path = vim/bundle/vim-cucumber
+	url = git://github.com/vim/bundle/vim-cucumber.git
+[submodule "vim/bundle/vim-fugitive"]
+	path = vim/bundle/vim-fugitive
+	url = git://github.com/vim/bundle/vim-fugitive.git
+[submodule "vim/bundle/vim-haml"]
+	path = vim/bundle/vim-haml
+	url = git://github.com/vim/bundle/vim-haml.git
+[submodule "vim/bundle/vim-liquid"]
+	path = vim/bundle/vim-liquid
+	url = git://github.com/vim/bundle/vim-liquid.git
+[submodule "vim/bundle/vim-markdown"]
+	path = vim/bundle/vim-markdown
+	url = git://github.com/vim/bundle/vim-markdown.git
+[submodule "vim/bundle/vim-ragtag"]
+	path = vim/bundle/vim-ragtag
+	url = git://github.com/vim/bundle/vim-ragtag.git
+[submodule "vim/bundle/vim-rails"]
+	path = vim/bundle/vim-rails
+	url = git://github.com/vim/bundle/vim-rails.git
+[submodule "vim/bundle/vim-rake"]
+	path = vim/bundle/vim-rake
+	url = git://github.com/vim/bundle/vim-rake.git
+[submodule "vim/bundle/vim-speeddating"]
+	path = vim/bundle/vim-speeddating
+	url = git://github.com/vim/bundle/vim-speeddating.git
+[submodule "vim/bundle/vim-surround"]
+	path = vim/bundle/vim-surround
+	url = git://github.com/vim/bundle/vim-surround.git
+[submodule "vim/bundle/vim-unimpaired"]
+	path = vim/bundle/vim-unimpaired
+	url = git://github.com/vim/bundle/vim-unimpaired.git
