--- a/.gitmodules
+++ b/.gitmodules
@@ -1,66 +1,66 @@
 [submodule "vim/bundle/vim-cucumber"]
 	path = vim/bundle/vim-cucumber
-	url = git://github.com/tpope/vim-cucumber.git
+	url = http://github.com/tpope/vim-cucumber.git
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
-	url = git://github.com/tpope/vim-fugitive.git
+	url = http://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/vim-haml"]
 	path = vim/bundle/vim-haml
-	url = git://github.com/tpope/vim-haml.git
+	url = http://github.com/tpope/vim-haml.git
 [submodule "vim/bundle/vim-liquid"]
 	path = vim/bundle/vim-liquid
-	url = git://github.com/tpope/vim-liquid.git
+	url = http://github.com/tpope/vim-liquid.git
 [submodule "vim/bundle/vim-markdown"]
 	path = vim/bundle/vim-markdown
-	url = git://github.com/tpope/vim-markdown.git
+	url = http://github.com/tpope/vim-markdown.git
 [submodule "vim/bundle/vim-ragtag"]
 	path = vim/bundle/vim-ragtag
-	url = git://github.com/tpope/vim-ragtag.git
+	url = http://github.com/tpope/vim-ragtag.git
 [submodule "vim/bundle/vim-rails"]
 	path = vim/bundle/vim-rails
-	url = git://github.com/tpope/vim-rails.git
+	url = http://github.com/tpope/vim-rails.git
 [submodule "vim/bundle/vim-rake"]
 	path = vim/bundle/vim-rake
-	url = git://github.com/tpope/vim-rake.git
+	url = http://github.com/tpope/vim-rake.git
 [submodule "vim/bundle/vim-speeddating"]
 	path = vim/bundle/vim-speeddating
-	url = git://github.com/tpope/vim-speeddating.git
+	url = http://github.com/tpope/vim-speeddating.git
 [submodule "vim/bundle/vim-surround"]
 	path = vim/bundle/vim-surround
-	url = git://github.com/tpope/vim-surround.git
+	url = http://github.com/tpope/vim-surround.git
 [submodule "vim/bundle/vim-unimpaired"]
 	path = vim/bundle/vim-unimpaired
-	url = git://github.com/tpope/vim-unimpaired.git
+	url = http://github.com/tpope/vim-unimpaired.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
+	url = http://github.com/scrooloose/nerdtree.git
 [submodule "vim/bundle/fuzzyfinder"]
 	path = vim/bundle/fuzzyfinder
-	url = git://github.com/itspriddle/vim-fuzzyfinder-pathogen.git
+	url = http://github.com/itspriddle/vim-fuzzyfinder-pathogen.git
 [submodule "vim/bundle/ack.vim"]
 	path = vim/bundle/ack.vim
-	url = git://github.com/mileszs/ack.vim.git
+	url = http://github.com/mileszs/ack.vim.git
 [submodule "vim-pathogen"]
 	path = vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+	url = http://github.com/tpope/vim-pathogen.git
 [submodule "vim/bundle/camelcasemotion"]
 	path = vim/bundle/camelcasemotion
-	url = git://github.com/ujihisa/camelcasemotion.git
+	url = http://github.com/ujihisa/camelcasemotion.git
 [submodule "vim/bundle/yankring"]
 	path = vim/bundle/yankring
-	url = git://github.com/chrismetcalf/vim-yankring.git
+	url = http://github.com/chrismetcalf/vim-yankring.git
 [submodule "vim/bundle/NERD_Commenter"]
 	path = vim/bundle/NERD_Commenter
-	url = git://github.com/scrooloose/nerdcommenter.git
+	url = http://github.com/scrooloose/nerdcommenter.git
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
+	url = http://github.com/scrooloose/syntastic.git
 [submodule "vim/bundle/vim-endwise"]
 	path = vim/bundle/vim-endwise
-	url = git://github.com/tpope/vim-endwise.git
+	url = http://github.com/tpope/vim-endwise.git
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
-	url = git://github.com/edsono/vim-matchit.git
+	url = http://github.com/edsono/vim-matchit.git
 [submodule "vim/bundle/vim-less"]
 	path = vim/bundle/vim-less
 	url = https://github.com/groenewege/vim-less.git
