--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,14 @@
-set -g mode-mouse on
+#set -g mode-mouse on
 set -g default-terminal "xterm-256color"
 set-window-option -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind-key Y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+#unbind [
+#bind Escape copy-mode
+#unbind P
+#bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
