--- a/.gitmodules
+++ b/.gitmodules
@@ -54,7 +54,7 @@
 	url = http://github.com/scrooloose/nerdcommenter.git
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
-	url = http://github.com/scrooloose/syntastic.git
+	url = git://github.com/scrooloose/syntastic.git
 [submodule "vim/bundle/vim-endwise"]
 	path = vim/bundle/vim-endwise
 	url = http://github.com/tpope/vim-endwise.git
