Added NERDTree again, and nerdtree-git-plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,7 +33,7 @@
 	url = http://github.com/tpope/vim-unimpaired.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
-	url = http://github.com/scrooloose/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
 [submodule "vim/bundle/fuzzyfinder"]
 	path = vim/bundle/fuzzyfinder
 	url = http://github.com/itspriddle/vim-fuzzyfinder-pathogen.git
@@ -112,3 +112,6 @@
 [submodule "vim/bundle/vim-jsx"]
 	path = vim/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
+[submodule "vim/bundle/nerdtree-git-plugin"]
+	path = vim/bundle/nerdtree-git-plugin
+	url = git@github.com:Xuyuanp/nerdtree-git-plugin.git
