--- a/.gitmodules
+++ b/.gitmodules
@@ -1,105 +1,102 @@
 [submodule "vim/bundle/vim-cucumber"]
 	path = vim/bundle/vim-cucumber
-	url = http://github.com/tpope/vim-cucumber.git
+	url = git@github.com:tpope/vim-cucumber.git
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
-	url = http://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
 [submodule "vim/bundle/vim-haml"]
 	path = vim/bundle/vim-haml
-	url = http://github.com/tpope/vim-haml.git
+	url = git@github.com:tpope/vim-haml.git
 [submodule "vim/bundle/vim-liquid"]
 	path = vim/bundle/vim-liquid
-	url = http://github.com/tpope/vim-liquid.git
+	url = git@github.com:tpope/vim-liquid.git
 [submodule "vim/bundle/vim-markdown"]
 	path = vim/bundle/vim-markdown
-	url = http://github.com/tpope/vim-markdown.git
+	url = git@github.com:tpope/vim-markdown.git
 [submodule "vim/bundle/vim-ragtag"]
 	path = vim/bundle/vim-ragtag
-	url = http://github.com/tpope/vim-ragtag.git
+	url = git@github.com:tpope/vim-ragtag.git
 [submodule "vim/bundle/vim-rails"]
 	path = vim/bundle/vim-rails
-	url = http://github.com/tpope/vim-rails.git
+	url = git@github.com:tpope/vim-rails.git
 [submodule "vim/bundle/vim-rake"]
 	path = vim/bundle/vim-rake
-	url = http://github.com/tpope/vim-rake.git
+	url = git@github.com:tpope/vim-rake.git
 [submodule "vim/bundle/vim-speeddating"]
 	path = vim/bundle/vim-speeddating
-	url = http://github.com/tpope/vim-speeddating.git
+	url = git@github.com:tpope/vim-speeddating.git
 [submodule "vim/bundle/vim-surround"]
 	path = vim/bundle/vim-surround
-	url = http://github.com/tpope/vim-surround.git
+	url = git@github.com:tpope/vim-surround.git
 [submodule "vim/bundle/vim-unimpaired"]
 	path = vim/bundle/vim-unimpaired
-	url = http://github.com/tpope/vim-unimpaired.git
+	url = git@github.com:tpope/vim-unimpaired.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+	url = git@github.com:scrooloose/nerdtree.git
 [submodule "vim/bundle/fuzzyfinder"]
 	path = vim/bundle/fuzzyfinder
-	url = http://github.com/itspriddle/vim-fuzzyfinder-pathogen.git
+	url = git@github.com:itspriddle/vim-fuzzyfinder-pathogen.git
 [submodule "vim/bundle/ack.vim"]
 	path = vim/bundle/ack.vim
-	url = http://github.com/mileszs/ack.vim.git
+	url = git@github.com:mileszs/ack.vim.git
 [submodule "vim-pathogen"]
 	path = vim-pathogen
-	url = http://github.com/tpope/vim-pathogen.git
+	url = git@github.com:tpope/vim-pathogen.git
 [submodule "vim/bundle/camelcasemotion"]
 	path = vim/bundle/camelcasemotion
-	url = http://github.com/ujihisa/camelcasemotion.git
+	url = git@github.com:ujihisa/camelcasemotion.git
 [submodule "vim/bundle/yankring"]
 	path = vim/bundle/yankring
-	url = http://github.com/chrismetcalf/vim-yankring.git
+	url = git@github.com:chrismetcalf/vim-yankring.git
 [submodule "vim/bundle/NERD_Commenter"]
 	path = vim/bundle/NERD_Commenter
-	url = http://github.com/scrooloose/nerdcommenter.git
+	url = git@github.com:scrooloose/nerdcommenter.git
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
+	url = git@github.com:scrooloose/syntastic.git
 [submodule "vim/bundle/vim-endwise"]
 	path = vim/bundle/vim-endwise
-	url = http://github.com/tpope/vim-endwise.git
+	url = git@github.com:tpope/vim-endwise.git
 [submodule "vim/bundle/matchit"]
 	path = vim/bundle/matchit
-	url = http://github.com/edsono/vim-matchit.git
+	url = git@github.com:tmhedberg/matchit.git 
 [submodule "vim/bundle/vim-less"]
 	path = vim/bundle/vim-less
-	url = https://github.com/groenewege/vim-less.git
+	url = git@github.com:groenewege/vim-less.git
 [submodule "vim/bundle/gundo"]
 	path = vim/bundle/gundo
-	url = https://github.com/sjl/gundo.vim.git
+	url = git@github.com:sjl/gundo.vim.git
 [submodule "vim/bundle/vim-yankring"]
 	path = vim/bundle/vim-yankring
-	url = https://github.com/chrismetcalf/vim-yankring.git
-[submodule "vim-solarized"]
-	path = vim-solarized
-	url = https://github.com/altercation/vim-colors-solarized
+	url = git@github.com:chrismetcalf/vim-yankring.git
 [submodule "vim/bundle/vim-solarized"]
 	path = vim/bundle/vim-solarized
-	url = https://github.com/altercation/vim-colors-solarized
+	url = git@github.com:altercation/vim-colors-solarized
 [submodule "vim/bundle/vim-powerline"]
 	path = vim/bundle/vim-powerline
-	url = https://github.com/Lokaltog/vim-powerline.git
+	url = git@github.com:Lokaltog/vim-powerline.git
 [submodule "vim/bundle/vim-slime"]
 	path = vim/bundle/vim-slime
 	url = git@github.com:jpalardy/vim-slime.git
 [submodule "vim/bundle/tabular"]
 	path = vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
+	url = git@github.com:godlygeek/tabular.git
 [submodule "vim/bundle/vim-jade"]
 	path = vim/bundle/vim-jade
-	url = git://github.com/digitaltoad/vim-jade.git
+	url = git@github.com:digitaltoad/vim-jade.git
 [submodule "vim/bundle/ctrlp.vim"]
 	path = vim/bundle/ctrlp.vim
-	url = https://github.com/kien/ctrlp.vim.git
+	url = git@github.com:kien/ctrlp.vim.git
 [submodule "vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
-	url = https://github.com/bling/vim-airline
+	url = git@github.com:bling/vim-airline
 [submodule "vim/bundle/emmet"]
 	path = vim/bundle/emmet
-	url = https://github.com/mattn/emmet-vim.git
+	url = git@github.com:mattn/emmet-vim.git
 [submodule "vim/bundle/rust"]
 	path = vim/bundle/rust
-	url = https://github.com/wting/rust.vim
+	url = git@github.com:wting/rust.vim
 [submodule "vim/bundle/vim-eunuch"]
 	path = vim/bundle/vim-eunuch
 	url = git@github.com:tpope/vim-eunuch.git
@@ -108,13 +105,13 @@
 	url = git@github.com:elixir-lang/vim-elixir.git
 [submodule "vim/bundle/vim-yaml"]
 	path = vim/bundle/vim-yaml
-	url = https://github.com/stephpy/vim-yaml.git
+	url = git@github.com:stephpy/vim-yaml.git
 [submodule "vim/bundle/vim-jsx"]
 	path = vim/bundle/vim-jsx
-	url = https://github.com/mxw/vim-jsx.git
+	url = git@github.com:mxw/vim-jsx.git
 [submodule "vim/bundle/nerdtree-git-plugin"]
 	path = vim/bundle/nerdtree-git-plugin
 	url = git@github.com:Xuyuanp/nerdtree-git-plugin.git
 [submodule "vim/bundle/vim-javascript"]
 	path = vim/bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
+	url = git@github.com:pangloss/vim-javascript.git
