Add diff-so-fancy config to git
Need to `brew install diff-so-fancy` for this to work

--- a/kitty.conf
+++ b/kitty.conf
@@ -164,8 +164,8 @@ map kitty_mod+8 eighth_window
 map kitty_mod+9 ninth_window
 map kitty_mod+0 tenth_window
 
-map kitty_mod+j next_tab
-map kitty_mod+k previous_tab
+map kitty_mod+j previous_tab
+map kitty_mod+k next_tab
 map kitty_mod+t     new_tab_with_cwd
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
